fix sorting by date now that we no longer translate the release dates.

--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_list.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_list.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment-with-locales.min.js"></script>
     <script type="text/javascript" src="//cdn.datatables.net/plug-ins/1.10.15/sorting/datetime-moment.js"></script>
     <script>
-        $.fn.dataTable.moment('D. MMMM YYYY', 'de-DE')
+        $.fn.dataTable.moment('D. MMMM YYYY')
         $(document).ready(function(){
             $('table').DataTable({
                 "pageLength": 20,
