add Steam OpenID login

--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
@@ -35,6 +35,14 @@
       </li>
     </ul>
   </div>
+
+  {% if user.is_authenticated %}
+    {{ user.username }}
+  {% else %}
+    <a href="{% url "social:begin" "steam" %}">
+        <img src="https://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_01.png">
+    </a>
+  {% endif %}
 </nav>
 
 {% block content %}
