Refactor checks and tests to use the VotingPeriod model.

--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/create_picks.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/create_picks.html
@@ -25,9 +25,9 @@
             </div>
 
             <div class="form-group">
-                {{ form.fallback.errors }}
-                <label for="{{ form.fallback.id_for_label }}">Fallback</label>
-                {{ form.fallback }}
+                {{ form.pick3.errors }}
+                <label for="{{ form.pick3.id_for_label }}">Pick 3</label>
+                {{ form.pick3 }}
             </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
