--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
@@ -20,29 +20,38 @@
 <body>
 
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="navbar-brand">The Pod Fantasy Steam</div>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-brand">The Pod Fantasy Steam</div>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'player_list' %}">Players</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'games_list' %}">Games</a>
-      </li>
-    </ul>
-  </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'player_list' %}">Players</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'games_list' %}">Games</a>
+            </li>
+            {% if user.is_authenticated %}
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'create_picks' %}">Create Picks</a>
+                </li>
+            {% endif %}
+        </ul>
+        <span class="navbar-text">
+            {% if user.is_authenticated %}
+                <a href="{% url 'player_profile' %}">{{ user.player.name }}</a>
+            {% else %}
+                <a href="{% url "social:begin" "steam" %}">
+                    <img src="https://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_01.png">
+                </a>
+            {% endif %}
+        </span>
+    </div>
 
-  {% if user.is_authenticated %}
-    {{ user.username }}
-  {% else %}
-    <a href="{% url "social:begin" "steam" %}">
-        <img src="https://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_01.png">
-    </a>
-  {% endif %}
 </nav>
 
 {% block content %}
