--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
@@ -10,8 +10,33 @@
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <title>The Pod Fantasy Steam</title>
     <style>
+        html {
+            overflow-y: hidden;
+        }
+
+        body, html {
+            height: 100%;
+        }
+
+        body {
+            overflow-y: auto;
+        }
+
         .container {
             padding: 10px;
+        }
+
+        body > .container {
+            padding-top: 70px;
+            max-height: calc(100% - 60px);
+        }
+
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 40px;
+            background-color: #f5f5f5;
         }
     </style>
     {% block extrahead %}
@@ -19,7 +44,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded fixed-top">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -45,8 +70,8 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'player_profile' %}">{{ user.player.name }}</a>
             {% else %}
-                <a href="{% url "social:begin" "steam" %}">
-                    <img src="https://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_01.png">
+                <a href="{% url "login" %}">
+                    Log in
                 </a>
             {% endif %}
         </span>
@@ -56,6 +81,12 @@
 
 {% block content %}
 {% endblock %}
+
+<footer class="footer">
+    <div class="container">
+        <a href="{% url 'privacy' %}">Datenschutzerklärung</a>
+    </div>
+</footer>
 
 <!-- jQuery first, then Tether, then Bootstrap JS. -->
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
