--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,36 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <title>The Pod Fantasy Steam</title>
-    <style>
-        html {
-            overflow-y: hidden;
-        }
-
-        body, html {
-            height: 100%;
-        }
-
-        body {
-            overflow-y: auto;
-        }
-
-        .container {
-            padding: 10px;
-        }
-
-        body > .container {
-            padding-top: 70px;
-            max-height: calc(100% - 60px);
-        }
-
-        .footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            height: 40px;
-            background-color: #f5f5f5;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'index.css' %}">
     {% block extrahead %}
     {% endblock %}
 </head>
@@ -84,7 +57,9 @@
 
 <footer class="footer">
     <div class="container">
-        <a href="{% url 'privacy' %}">Datenschutzerklärung</a>
+        <p>
+            <a href="{% url 'privacy' %}">Datenschutzerklärung</a>
+        </p>
     </div>
 </footer>
 
