--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/create_picks.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/create_picks.html
@@ -2,6 +2,9 @@
 
 {% block content %}
     <div class="container">
+    {% if errorMessage %}
+        {{ errorMessage }}
+    {% else %}
         <h1>Pick your games</h1>
         <form method="post">
             {% csrf_token %}
@@ -32,5 +35,6 @@
 
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+    {% endif %}
     </div>
 {% endblock %}
