Fix typo in privacy policy.

--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/privacy.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/privacy.html
@@ -67,7 +67,7 @@
         <p>Unsere Seiten nutzen Funktionen von Steam. Anbieter ist die Valve Corporation, P.O. Box 1688, Bellevue, WA 98004, USA.</p>
 
         <p>Diese Seite nutzt Steam OpenID, um Sie zu authentifizieren. Nach Ihrem Login erhalten wir von Steam eine
-        eindeutige ID. Wir speichern keine weitere Informationen von wie Nickname oder E-Mail-Adresse von Ihnen.
+        eindeutige ID. Wir speichern keine weitere Informationen wie Nickname oder E-Mail-Adresse von Ihnen.
         </p>
 
         <p>Steams eigene Datenschutzrichtlinien sind unter
