--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded fixed-top">
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -52,8 +52,11 @@
 
 </nav>
 
+<main>
 {% block content %}
 {% endblock %}
+</main>
+
 
 <footer class="footer">
     <div class="container">
