Set width, height and alt attributes on img tag on login page

--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/login.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/login.html
@@ -7,7 +7,8 @@
         {% else %}
             <p>
             <a href="{% url "social:begin" "steam" %}">
-                <img src="https://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_01.png">
+                <img src="https://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_01.png"
+                width="180" height="35" alt="Sign in through Steam">
             </a>
             </p>
 
