--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/pick_overview.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/pick_overview.html
@@ -15,6 +15,7 @@
             <a href="{% url 'pick_overview_by_week' 4%}">Week 4</a>
         </div>
 
+        {% if games %}
         <table class="table">
             <thead>
                 <tr>
@@ -34,11 +35,11 @@
                         <td>{{ game.picked }}</td>
                         <td>{{ game.pickedAsJoker }}</td>
                     </tr>
-                {% empty %}
-                No picks yet
                 {% endfor %}
             </tbody>
         </table>
-
+      {% else %}
+        No picks yet.
+      {% endif %}
     </div>
 {% endblock %}
