--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
@@ -48,11 +48,9 @@
             color: "#F44336",
             type: "line",
             name: "Score",
-            pointStart: data[0].timestamp * 1000,
-            pointInterval: 1000 * 60 * 60 * 24,
             data: data.map(function(item){
                 var unroundedScore = Math.max(0, item.players - item.playersVariance) * item.price
-                return Math.floor(unroundedScore/1000)*1000
+                return [item.timestamp * 1000, Math.floor(unroundedScore/1000)*1000]
             })
         }]
     })
