--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/player_detail.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/player_detail.html
@@ -55,14 +55,67 @@
             })
         }]
     })
+
+    window.Highcharts.StockChart('positionChartContainer', {
+        chart: {
+            spacing: [0, 5, 0, 5]
+        },
+        navigator: {
+            enabled: false
+        },
+        rangeSelector: {
+            enabled: false
+        },
+        credits: {
+            enabled: false
+        },
+        scrollbar: {
+            enabled: false
+        },
+        exporting: {
+            enabled: false
+        },
+        legend: {
+            enabled: false
+        },
+        plotOptions: {
+            line: {
+                dataGrouping: {
+                    approximation: "high"
+                }
+            }
+        },
+        yAxis: {
+            allowDecimals: false,
+            min: 1,
+            max: {{ numberOfPlayers }},
+            reversed: true
+        },
+        xAxis: {
+            type: "datetime"
+        },
+        series: [{
+            color: "#F44336",
+            type: "line",
+            name: "Position",
+            pointStart: data[0].timestamp * 1000,
+            pointInterval: 1000 * 60 * 60 * 24,
+            data: data.map(function(item){
+                return item.position || null
+            })
+        }]
+    })
     </script>
 {% endblock %}
 
 {% block content %}
     <div class="container">
         <h2 class="mb-4">{{ object.name }}</h2>
-        <h2 class="mb-4">Score: {{ object.score|intcomma }}</h2>
-        <div id="chartContainer"></div>
+        <div class="row">
+            <div class="col" id="chartContainer"></div>
+            <div class="col" id="positionChartContainer"></div>
+        </div>
+
         {% for week, picks in groupedPicks.items %}
             <h4>Week {{ week }}</h4>
             <table class="table">
